tests/ui/suggestions/suggest-turbofish-parsed-as-comparisons.stderr
error[E0423]: expected value, found struct `HashMap`
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:11:34
   |
LL |     let _ = Arc::new(RwLock::new(HashMap<i32, i64>::default()));
   |                                  ^^^^^^^
   |
  --> $SRC_DIR/std/src/collections/hash/map.rs:LL:COL
  ::: $SRC_DIR/std/src/collections/hash/map.rs:LL:COL
   |
   = note: `HashMap` defined here

error[E0423]: expected value, found builtin type `i32`
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:11:42
   |
LL |     let _ = Arc::new(RwLock::new(HashMap<i32, i64>::default()));
   |                                          ^^^ not a value

error[E0423]: expected value, found builtin type `i64`
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:11:47
   |
LL |     let _ = Arc::new(RwLock::new(HashMap<i32, i64>::default()));
   |                                               ^^^ not a value

error[E0425]: cannot find external crate `default` in the crate root
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:11:53
   |
LL |     let _ = Arc::new(RwLock::new(HashMap<i32, i64>::default()));
   |                                                     ^^^^^^^ not found in the crate root

error[E0423]: expected value, found struct `HashMap`
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:17:19
   |
LL |     let _ = S.foo(HashMap<i32, i64>::default());
   |                   ^^^^^^^
   |
  --> $SRC_DIR/std/src/collections/hash/map.rs:LL:COL
  ::: $SRC_DIR/std/src/collections/hash/map.rs:LL:COL
   |
   = note: `HashMap` defined here

error[E0423]: expected value, found builtin type `i32`
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:17:27
   |
LL |     let _ = S.foo(HashMap<i32, i64>::default());
   |                           ^^^ not a value

error[E0423]: expected value, found builtin type `i64`
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:17:32
   |
LL |     let _ = S.foo(HashMap<i32, i64>::default());
   |                                ^^^ not a value

error[E0425]: cannot find external crate `default` in the crate root
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:17:38
   |
LL |     let _ = S.foo(HashMap<i32, i64>::default());
   |                                      ^^^^^^^ not found in the crate root

error[E0061]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:11:22
   |
LL |     let _ = Arc::new(RwLock::new(HashMap<i32, i64>::default()));
   |                      ^^^^^^^^^^^              --------------- unexpected argument #2 of type `bool`
   |
note: associated function defined here
  --> $SRC_DIR/std/src/sync/poison/rwlock.rs:LL:COL
help: remove the extra argument
   |
LL -     let _ = Arc::new(RwLock::new(HashMap<i32, i64>::default()));
LL +     let _ = Arc::new(RwLock::new(HashMap<i32));
   |

error[E0061]: this method takes 1 argument but 2 arguments were supplied
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:17:15
   |
LL |     let _ = S.foo(HashMap<i32, i64>::default());
   |               ^^^              --------------- unexpected argument #2 of type `bool`
   |
note: expected `HashMap<i32, i64>`, found `bool`
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:17:19
   |
LL |     let _ = S.foo(HashMap<i32, i64>::default());
   |                   ^^^^^^^^^^^
   = note: expected struct `HashMap<i32, i64>`
                found type `bool`
note: method defined here
  --> $DIR/suggest-turbofish-parsed-as-comparisons.rs:8:8
   |
LL |     fn foo(&self, _: HashMap<i32, i64>) {}
   |        ^^^        --------------------
help: remove the extra argument
   |
LL -     let _ = S.foo(HashMap<i32, i64>::default());
LL +     let _ = S.foo(/* HashMap<i32, i64> */);
   |

error: aborting due to 10 previous errors

Some errors have detailed explanations: E0061, E0423, E0425.
For more information about an error, try `rustc --explain E0061`.
